[package]
name = "engine-common"
version = "0.1.1"
edition = "2021"

[dependencies]
# 公共资源
engine-share = { path = "../share" }
# 处理 JSON 数据
serde_json = "1.0.124"
# 解析和生成 TOML 格式配置文件
toml = "0.8.19"
# 序列化和反序列化数据
serde = { version = "1.0.207", features = ["derive"] }
# serde 的派生宏
serde_derive = "1.0.207"
# 用于创建全局静态变量
lazy_static = "1.5.0"
# 延迟初始化
once_cell = "1.19.0"
# 处理日期和时间
chrono = "0.4.38"
# 表达式
evalexpr = "11.3.0"
# 正则表达式
regex = "1"
# uuid
uuid = { version = "1.11.0", features = ["serde", "v4"] }
# 加载dll，仅在windows平台下生效
[target.'cfg(windows)'.dependencies]
libloader = "0.1.4"
# 加载 so和dylib，仅在unix平台下生效（linux、macos）
[target.'cfg(unix)'.dependencies]
libloading = "0.8.5"
# 日志工具（放弃自定义日志）
tklog = "0.2.4"